# how-to-test

./: LICENSE  README.md  pyproject.toml
resources/: some_file.txt
src/: some_module.py
tests/: conftest.py  test_with_pytest.py  test_with_unittest.py
